Revision history for Net::DNS                                     -*-text-*-
=============================



*** 0.53_03 Not Released yet.

Fix rt.cpan.org 15119

  main_loop() consumed 100% of memory, because of a bug that
  couced loop_once() to loop ad infinitum.

Fix rt.cpan.org 15299

  Defining multiple constants with 'use constant { BLA => 1, FOO =>2 };
  is a backwards incompatible feature. Thanks to Ian White for spotting and
  fixing this.

*** 0.53_02 Oct 18, 2005



Fix rt.cpan.org 14046

  RRSIGs verify and create failed fror a number of RR types. The 
  error message showed something like:
      Can't call method "dn_comp" on an undefined value 
  This was caused by an ommission in the _canonicalRdata() method
  in Net::DNS::RR that was inherited by all failing RR types.

  Code was added to t/05-rr.t that will test signature creation
  if Net::DNS::SEC is available and can be loaded.


Feature async nameserver behaviour.
  
   In rt.cpan.org 14622 Robert Stone suggested:

      The fact that it needs to take over the main runnning thread
      limits its audience.  Since many daemon programs are already
      driven by a top level select loop, it seems useful to provide an
      API for the user to integrate Net::DNS::Nameserver processing to
      their own select loop.

   He also supplied example code for which he is hereby acknowledged.
   The patch was not used because simultaneously Robert Martin-Legene
   supplied a patch to Nameservers.pm that allowed the same async
   functionality through the use of loop_once method. Robert M-L's 
   code also carefully manages the TCP sockets, so that they can 
   deal with AXFRs.

   Robert S. has been so kind to review Robert M-L's code and is hereby
   kindly acknowledged.

   NB. Since the code may be subject to change the documentation of the
   loop_once method has been commented out.


Fix bgsend srcaddr for IPv6 Achim Adam previously noticed that the